Fix for bug 81751. Add define for mime type multipart/x-mixed-replace and multipart/byteranges. Also export nsIFileStreams.idl on Mac. R=varada, SR=mscott, A=asa